Fix layout issue in PullRequestChecksFailed dialog

--- a/app/styles/ui/_pull-request-checks-failed.scss
+++ b/app/styles/ui/_pull-request-checks-failed.scss
@@ -8,6 +8,10 @@
     flex-direction: row;
     align-items: center;
 
+    .ci-check-rerun {
+      margin-right: var(--spacing);
+    }
+
     > .octicon {
       width: 20px;
       height: 20px;
